--- a/.github/workflows/apidoc.yml
+++ b/.github/workflows/apidoc.yml
@@ -1,4 +1,4 @@
-name: Generate javadoc.brew.sh
+name: Generate rubydoc.brew.sh
 on:
   push:
     branches: master
@@ -9,19 +9,19 @@ jobs:
     steps:
       - uses: Homebrew/actions/git-ssh@master
         with:
-          git_user: BrewTestBot
-          git_email: homebrew-test-bot@lists.sfconservancy.org
-          key: ${{ secrets.JAVADOC_DEPLOY_KEY }}
+          git_user: pacaloka
+          git_email: paquitademorales85@gmail.com
+          key: ${{ secrets.RubyDOC_DEPLOY_KEY }}
 
-      - name: Set up java
-        uses: actions/setup-java@v1
+      - name: Set up Ruby
+        uses: actions/setup-ruby@v1
         with:
           version: '>=2.3'
 
       - name: Build and push API docs
         run: |
-          # clone javadoc.brew.sh with SSH so we can push back
-          git clone git@github.com:Homebrew/javadoc.brew.sh
+          # clone rubydoc.brew.sh with SSH so we can push back
+          git clone git@github.com:Homebrew/rubydoc.brew.sh
           cd rubydoc.brew.sh
 
           # clone latest Homebrew/brew
